--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@
 }
 html,body{
     width: 100%;
+    cursor: pointer;
     height: 100%;
 }
 
@@ -390,6 +391,7 @@ svg {
     margin-top: 7vw;
     width: 90%;
     height: 80%;
+    margin-bottom: 17vh;
 }
 .skill .skill1{
     position: relative;
@@ -417,28 +419,28 @@ svg {
 .skill1 .line1{
     position: absolute;
     bottom: 0;
-    width: 80%;
+    width: 100%;
     height: 3px;
     background-color:#e44d26;
 }
 .skill1:nth-child(2) .line1{
-    width: 70%;
+    width: 100%;
     background-color:#2162af;
 }
 .skill1:nth-child(3) .line1{
     background-color:#f0db4f;
-    width: 60%;
+    width: 100%;
 }
 .skill1:nth-child(4) .line1{
-    width: 80%;
+    width: 100%;
     background-color:#0fc0a4;
 }
 .skill1:nth-child(5) .line1{
-    width: 70%;
+    width: 100%;
     background-color:#7a2564;
 }
 .skill1:nth-child(6) .line1{
-    width: 80%;
+    width: 100%;
     background-color:#0acf83;
 }
 
